[tool.poetry]
name = "ytmigrate"
version = "0.1.0"
description = "Tool for migrating videos from YouTube to VK"
authors = ["Nikita Sychev <root@nsychev.ru>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving :: Mirroring"
]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2024.8.6"
vk-api = {git = "https://github.com/python273/vk_api"}
python-magic = "^0.4.27"
click = "^8.1.7"

[tool.poetry.scripts]
ytmigrate = "ytmigrate.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
